feat(core): paso de parametros entre pantalla y modal

--- a/src/app/cronometros/cronometros.page.html
+++ b/src/app/cronometros/cronometros.page.html
@@ -7,7 +7,7 @@
 <ion-content>
 
     <ion-fab vertical="bottom" horizontal="end" slot="fixed">
-    <ion-fab-button (click)="newTimerModal()">
+    <ion-fab-button (click)="openNewTimerModal()">
       <ion-icon name="stopwatch"></ion-icon>
     </ion-fab-button>
   </ion-fab>
