--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -3,7 +3,7 @@
     <ion-menu>
       <ion-header>
         <ion-toolbar>
-          <ion-title>Menu</ion-title>
+          <ion-title>Pro Barbacue Timer</ion-title>
         </ion-toolbar>
       </ion-header>
       <ion-content>
