Add first aproach of time picker and the rest of values of timer modal

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,15 +1,15 @@
 <ion-app>
-  <ion-split-pane>
+  <ion-split-pane class="mainSplitPane">
     <ion-menu>
       <ion-header>
-        <ion-toolbar>
-          <ion-title>Pro Barbacue Timer</ion-title>
+        <ion-toolbar color="primary">
+          <ion-title>Pro Barbacue Timers</ion-title>
         </ion-toolbar>
       </ion-header>
-      <ion-content>
+      <ion-content color="medium">
         <ion-list>
           <ion-menu-toggle auto-hide="false" *ngFor="let p of appPages">
-            <ion-item [routerDirection]="'root'" [routerLink]="[p.url]">
+            <ion-item [routerDirection]="'root'" [routerLink]="[p.url]" color="medium">
               <ion-icon slot="start" [name]="p.icon"></ion-icon>
               <ion-label>
                 {{p.title}}
