Timer modal with time picker finished

--- a/src/app/timer-modal/timer-modal.page.html
+++ b/src/app/timer-modal/timer-modal.page.html
@@ -63,10 +63,10 @@
         okText="Aceptar"
         required="true"
       >
-        <ion-select-option value="1">1</ion-select-option>
-        <ion-select-option value="2">2</ion-select-option>
-        <ion-select-option value="3">3</ion-select-option>
-        <ion-select-option value="4">4</ion-select-option>
+        <ion-select-option [value]=1>1</ion-select-option>
+        <ion-select-option [value]=2>2</ion-select-option>
+        <ion-select-option [value]=3>3</ion-select-option>
+        <ion-select-option [value]=4>4</ion-select-option>
       </ion-select>
     </ion-item>
   </ion-item-group>
