--- a/src/theme/variables.scss
+++ b/src/theme/variables.scss
@@ -74,9 +74,25 @@
   --ion-color-light-contrast-rgb: 0, 0, 0;
   --ion-color-light-shade: #d7d8da;
   --ion-color-light-tint: #f5f6f9;
+
+  --ion-grid-column-padding: 3px;
+
+  --ion-grid-column-padding-xs: 0px;
+  --ion-grid-column-padding-sm: 0px;
+  --ion-grid-column-padding-md: 0px;
+  --ion-grid-column-padding-lg: 0px;
+  --ion-grid-column-padding-xl: 0px;
+
+  --ion-grid-padding: 0px;
+
+  --ion-grid-padding-xs: 0px;
+  --ion-grid-padding-sm: 0px;
+  --ion-grid-padding-md: 0px;
+  --ion-grid-padding-lg: 0px;
+  --ion-grid-padding-xl: 0px;
 }
 
 @font-face {
-  font-family: 'sevenSegment';
-  src: url('../assets/fonts/seven_segment.ttf');
+  font-family: "sevenSegment";
+  src: url("../assets/fonts/seven_segment.ttf");
 }
