--- a/src/app/timer-modal/timer-modal.page.html
+++ b/src/app/timer-modal/timer-modal.page.html
@@ -59,6 +59,7 @@
       <ion-label>Vueltas</ion-label>
       <ion-select
         [(ngModel)]="timerCard.timer.step"
+        [(ngModel)]="timerCard.timer.memStep"
         cancelText="Cancelar"
         okText="Aceptar"
         required="true"
